# plastic-attractor-notebook

./: .gitignore  Attractor+CuedAttractorModelcontroltestoutput.ipynb  LICENSE  README.md  plastic_attractor_model_explained.ipynb  pyproject.toml
examples/: run_baseline.py
plastic_attractor_control+follow ups/: README.md  compare_all_models.py  congruency_matched_control3.py  cross_decode_gated_attractor.py  decode_gated_attractor.py  decode_gated_attractor_stats.py  run_all_controls_colab.ipynb
plastic_attractor_control+follow ups/attractor_version1/: attractor_control_analysis.py  untitled3.py
plastic_attractor_control+follow ups/cued_attractor/: __init__.py  analysis.py  experiment.py  launcher.py  run_controls.py
plastic_attractor_control+follow ups/gated_attractor/: __init__.py  analysis.py  experiment.py  model.py  model_versions_config.py  run_controls.py  task.py
plastic_attractor_control+follow ups/original_model/: __init__.py  analysis.py  experiment.py  model.py  run_baseline_and_control3.py  task.py
published_model/: README.md  pyproject.toml
published_model/plastic_attractor/: __init__.py  analysis.py  experiment.py
published_model/tests/: test_model.py
tests/: test_experiment.py
updated_model/: attractor_rnn.py  benchmark_cued_vs_gated.py  presentation_figures.py  simulation_launcher.py  tms_demo.py
updated_model/cued_attractor/: __init__.py  analysis.py  cued_collect_results.py  experiment.py  generate_parameter_sweep.py  hpc_launcher.py  hpc_model_versions_config.py  hpc_versions.txt  launcher.py  model.py  model_versions_config.py  (+1 more)
(+32 files in other folders)
